[package]
name = "locreadion"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap =  { version = "4.3.2", features = ["derive"]}
polars = { version = "0.30.0", features = ["lazy", "is_in", "dtype-struct", "dtype-array"] }

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true
codegen-units = 1
panic = "abort"
